p2/conf/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  labels:
    app: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: edhommee/app3:dev
        ports:
        - containerPort: 3006
---
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  ports:
  - port: 80
    targetPort: 3006
    name: tcp
  selector:
    app: app3
